# NeuralNetwork

./: CMakeLists.txt  README.md
data/: network.txt  torch_input.txt  torch_network.txt  torch_reference.txt
examples/evaluate_model/: .gitignore  evaluate.cc  makefile  model.nn  run.sh
include/NeuralNetwork/: Layer.h
include/nn/: Layer.h  NeuralNetwork.h  Node.h  io.h
src/: CMakeLists.txt  Layer.cc  Layer.h  NeuralNetwork.cc  NeuralNetwork.h  Node.cc  Node.h  io.cc  main.cc
tests/: CMakeLists.txt  backward.cc  backward_simple.cc  forward.cc  forward_linear.cc  forward_simple.cc  readfile.cc  running.cc  torch_comparison.cc
